--- a/lesson-21/scss/style.scss
+++ b/lesson-21/scss/style.scss
@@ -16,7 +16,7 @@ $header-background: #F6F6F6;
 $hover-color: #6620C1;
 
 // Breakpoint variables
-$tablet-breakpoint: 935.98px;
+$tablet-breakpoint: 965.98px;
 $mobile-breakpoint: 730.98px;
 $small-mobile-breakpoint: 440.98px;
 $old-small-mobile-breakpoint: 320.98px;
@@ -51,7 +51,7 @@ body {
 
 // block header
 .header {
-  padding-bottom: 7px;
+  //padding-bottom: 7px;
   width: 100%;
   background-color: #FFF;
 
@@ -65,24 +65,39 @@ body {
 
   // .header__container
   &__container {
+    padding: 10px 15px;
     min-height: 108px;
     display: flex;
-    gap: 20px;
+    gap: 40px;
     justify-content: space-between;
     align-items: center;
     
     @media (max-width: $tablet-breakpoint) {
+      min-height: 60px;
+      gap: 30px;
 
+    }
+    
+    @media (max-width: 457.98px) {
+      gap: 5px;
     }
   }
 
   // .header__logo
   &__logo {
-    width: 91px;
-    height: 45px;
     flex-shrink: 0;
     position: relative;
     z-index: 10;
+
+    img {
+      width: 91px;
+      height: 45px;
+
+      @media (max-width: $small-mobile-breakpoint) {
+        width: 81px;
+        height: 35px;
+      }
+    }
   }
 
   // .header__menu
@@ -105,6 +120,10 @@ body {
     column-gap: 12px;
     position: relative;
     z-index: 10;
+
+    @media (max-width: 457.98px) {
+      column-gap: 5px;
+    }
   }
 
   // .header__icon-menu
@@ -167,15 +186,29 @@ body {
 }
 
 .form {
+
+  @media (max-width: 600.98px) {
+    justify-content: end;
+  }
   // .form__button
   &__button {
+    min-width: 20px;
+    min-height: 20px;
+
+    @media (max-width: 502.98px) {
+
+
+    }
+
     img {
       width: 20px;
       height: 20px;
       position: absolute;
-      left: 18px;
+      left: 32px;
       top: 50%;
       transform: translateY(-50%);
+
+
     }
   }
 
@@ -186,10 +219,6 @@ body {
     border-radius: 8px;
     background: $header-background;
 
-    @media (max-width: 1110.98px) {
-
-    }
-
     @media (max-width: $tablet-breakpoint) {
       max-width: 100%;
       width: 100%;
@@ -198,6 +227,10 @@ body {
     &::placeholder {
       color: #807D7E;
       font-size: 16px;
+      
+      @media (max-width: 502.98px) {
+        display: none;
+      }
     }
   }
 }
@@ -237,11 +270,12 @@ body {
   &__list {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     column-gap: 38px;
+    row-gap: 12px;
 
-    @media (max-width: 1110.98px) {
-      column-gap: 28px;
+    @media (max-width: 1167.98px) {
+      column-gap: 22px;
     }
 
     @media (max-width: $tablet-breakpoint) {
@@ -309,6 +343,11 @@ body {
     & > img {
       width: 20px;
       height: 20px;
+
+      @media (max-width: 502.98px) {
+        width: 15px;
+        height: 15px;
+      }
     }
 
   }
@@ -330,6 +369,11 @@ body {
 // block page
 .page {
   padding: 115px 0;
+
+  @media (max-width: $tablet-breakpoint) {
+    padding: 65px;
+
+  }
 
   // .page--position
   &--position {
